infrastructure/openshift/citizen-portal-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    app: citizen-portal
  name: citizen-portal
spec:
  selector:
    app: citizen-portal
  replicas: 3
  template:
    metadata:
      labels:
        app: citizen-portal
    spec:
      containers:
      - args:
        - nginx
        - -g
        - daemon off;
        image: ' '
        name: citizen-portal
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - citizen-portal
      from:
        kind: ImageStreamTag
        namespace: 0198bb-tools
        name: citizen-portal:latest
    type: ImageChange
status: {}
