infrastructure/openshift/citizen-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: 0198bb-dev
  name: citizen-portal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: citizen-portal
