infrastructure/openshift/dispute-api-service.yaml
apiVersion: v1
kind: Service
metadata:  
  creationTimestamp: null 
  name: dispute-api
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 80
  selector:
    io.kompose.service: dispute-api
status:
  loadBalancer: {}
